<resources>
    <string name="app_name">AndroidDlyPro</string>

    <string name="geoquiz">GeoQuiz</string>

    <string name="button_true">TRUE</string>
    <string name="button_false">FALSE</string>
    <string name="button_next">NEXT</string>

    <string name="correct">Correct!</string>
    <string name="not_correct">Not Correct!</string>

    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\’s oldest and deepest freshwater lake.</string>
    <string name="prev">Prev</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong</string>
    <string name="criminalintent">CriminalIntent</string>
    <string name="enter_a_title_for_the_crime">Enter a title for the crime.</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="solved">Solved</string>
    <string name="crime_list_res_one">Crime # :</string>
    <string name="crim_title">Crime Title</string>
    <string name="crim_data">Crim Data</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
</resources>
